--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,17 @@ h1 {
   font-weight: bold;
   color: LimeGreen;
 }
+
+.up {
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.up:hover {
+  -webkit-transform: translateY(-20px);
+  -moz-transform: translateY(-20px);
+  -ms-transform: translateY(-20px);
+  -o-transform: translateY(-20px);
+  transform: translateY(-20px);
+}
