--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,12 @@ h1 {
 }
 
 .up:hover {
-  -webkit-transform: translateY(-20px);
-  -moz-transform: translateY(-20px);
-  -ms-transform: translateY(-20px);
-  -o-transform: translateY(-20px);
-  transform: translateY(-20px);
+  -webkit-transform: translateY(-10px);
+  -moz-transform: translateY(-10px);
+  -ms-transform: translateY(-10px);
+  -o-transform: translateY(-10px);
+  transform: translateY(-10px);
+  -webkit-box-shadow: 3px 9px 41px -5px rgba(128,128,128,1);
+  -moz-box-shadow: 3px 9px 41px -5px rgba(128,128,128,1);
+  box-shadow: 3px 9px 41px -5px rgba(128,128,128,1);
 }
