--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,17 @@ h1 {
 }
 
 .up:hover {
-  -webkit-transform: translateY(-10px);
+  -webkit-transform: scale(1.02);
+        -moz-transform: scale(1.02);
+        -ms-transform: scale(1.02);
+        -o-transform: scale(1.02);
+        transform: scale(1.02);
+  /*-webkit-transform: translateY(-10px);
   -moz-transform: translateY(-10px);
   -ms-transform: translateY(-10px);
   -o-transform: translateY(-10px);
-  transform: translateY(-10px);
-  -webkit-box-shadow: 3px 9px 41px -5px rgba(128,128,128,1);
-  -moz-box-shadow: 3px 9px 41px -5px rgba(128,128,128,1);
-  box-shadow: 3px 9px 41px -5px rgba(128,128,128,1);
+  transform: translateY(-10px);*/
+  -webkit-box-shadow: 0px 7px 31px -5px rgba(149,149,149,1);
+  -moz-box-shadow: 0px 7px 31px -5px rgba(149,149,149,1);
+  box-shadow: 0px 7px 31px -5px rgba(149,149,149,1);
 }
