--- a/css/style.css
+++ b/css/style.css
@@ -38,16 +38,20 @@ h1 {
 }
 
 .up:hover {
+  /* Transform css cite: http://www.w3schools.com/cssref/css3_pr_transform.asp */
   -webkit-transform: scale(1.03);
   -moz-transform: scale(1.03);
   -ms-transform: scale(1.03);
   -o-transform: scale(1.03);
   transform: scale(1.03);
+
   /*-webkit-transform: translateY(-10px);
   -moz-transform: translateY(-10px);
   -ms-transform: translateY(-10px);
   -o-transform: translateY(-10px);
   transform: translateY(-10px);*/
+
+  /* Shadow Css cite: http://www.w3schools.com/css/css3_shadows.asp */
   -webkit-box-shadow: 0px 7px 31px -5px rgba(149,149,149,1);
   -moz-box-shadow: 0px 7px 31px -5px rgba(149,149,149,1);
   box-shadow: 0px 7px 31px -5px rgba(149,149,149,1);
